k8s/pihole/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pihole
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: pihole
          image: pihole/pihole
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: dns-tcp
              containerPort: 53
            - name: dns-udp
              containerPort: 53
              protocol: UDP
          volumeMounts:
            - name: server
              mountPath: /etc/pihole
              subPath: pihole/pihole
            - name: server
              mountPath: /etc/dnsmasq.d
              subPath: pihole/dnsmasq
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
