k8s/pihole/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("pihole.mchill.duckdns.org")
      kind: Rule
      services:
        - name: pihole
          port: 80
      middlewares:
        - name: pihole
